# inflect

./: .flake8  .gitignore  .pep8  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  NEWS.rst  PKG-INFO  README.rst  README.txt  inflect.py  pyproject.toml  rp_time_in_words  setup.cfg  setup.py  tests.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: main.yml
docs/: conf.py  index.rst
inflect/: __init__.py
inflect/compat/: pydantic.py
newsfragments/: +1fa3522c.removal.rst  +d538c2d8.bugfix.rst  178.bugfix.rst  186.feature.rst  187.bugfix.rst  187.feature.rst  188.feature.rst  195.feature.rst  211.feature.rst  215.bugfix.rst  218.feature.rst  222.bugfix.rst  225.feature.rst  226.bugfix.rst
tests/: inflections.txt  test_an.py  test_classical_all.py  test_classical_ancient.py  test_classical_ancient_1.py  test_classical_herd.py  test_classical_herd_1.py  test_classical_names.py  test_classical_names_1.py  test_classical_person.py  test_classical_person_1.py  test_classical_zero.py  test_classical_zero_1.py  test_compounds.py  test_inflections.py  test_join.py  test_numwords.py  test_pl_si.py  test_pwd.py  test_singular_ss.py  test_unicode.py  test_wordlist.py  tests_pwd.py  words.txt
