[metadata]
license_file = LICENSE
name = inflect
author = Paul Dyson
author_email = pwdyson@yahoo.com
maintainer=Jason R. Coombs
maintainer_email=jaraco@jaraco.com
description = Correctly generate plurals, singular nouns, ordinals, indefinite articles; convert numbers to words
long_description = file:README.rst
url = https://github.com/jazzband/inflect
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Natural Language :: English
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Text Processing :: Linguistic

[options]
packages = find:
include_package_data = true
py_modules = inflect
python_requires = >=3.6
install_requires =
    importlib_metadata; python_version < "3.8"
setup_requires = setuptools_scm[toml] >= 3.4.1
keywords = plural inflect participle

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	# jaraco/skeleton#22
	jaraco.test >= 3.2.0

	# local
	pygments

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
