[metadata]
name = inflect
author = Paul Dyson
author_email = pwdyson@yahoo.com
maintainer=Jason R. Coombs
maintainer_email=jaraco@jaraco.com
description = Correctly generate plurals, singular nouns, ordinals, indefinite articles; convert numbers to words
long_description = file:README.rst
url = https://github.com/jaraco/inflect
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Natural Language :: English
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Text Processing :: Linguistic

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	more_itertools
	pydantic >= 1.9.1
	typing_extensions
keywords = plural inflect participle

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	pygments

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# tidelift
	jaraco.tidelift >= 1.4

	# local

[options.entry_points]
